# CMake

./: .gitignore  CMakeLists.txt
cmake-packages/step1/: README.md
cmake-packages/step1/libmath/: CMakeLists.txt
cmake-packages/step2/: README.md
cmake-packages/step2/libmath/: CMakeLists.txt
cmake-packages/step2/using-mymath/: CMakeLists.txt  test.cpp
cmake-packages/step3/: README.md
cmake-packages/step3/libmath/: CMakeLists.txt
cmake-packages/step4/: Makefile
cmake-packages/step4/libmath/: CMakeLists.txt  MyMathConfig.cmake
cmake-packages/step4/libmath/src/: mymath.cpp
cmake-packages/step4/using-mymath/: CMakeLists.txt
cmake_language/control_flow/: ifs.cmake
cmake_language/functions/: function.cmake
cmake_packages/foo_package/: CMakeLists.txt  foo.cpp  foo.h
cmake_test/: CMakeLists.txt
cmake_test/app/: CMakeLists.txt  main.cpp
cmake_tutorial/tutorial/Step1/after_exercise/: CMakeLists.txt  tutorial.cxx
cmake_tutorial/tutorial/Step2/after_exercise/: CMakeLists.txt  tutorial.cxx
cmake_tutorial/tutorial/Step3/after_exercise/MathFunctions/: CMakeLists.txt
cmake_tutorial/tutorial/Step4/after_exercise/: CMakeLists.txt
cmake_tutorial/tutorial/Step4/after_exercise/MathFunctions/: CMakeLists.txt
cmake_variables/build_type/: CMakeLists.txt  main.cpp
cmake_variables/current_source_dir/: CMakeLists.txt  README.md  main.cpp
cmake_variables/current_source_dir/SubProject/: CMakeLists.txt  math.cpp
cmake_variables/runtime_output_directory/: README.md
cmake_variables/runtime_output_directory/per_target/: CMakeLists.txt  README.md  main.cpp
cmake_variables/runtime_output_directory/per_target/myapp_bin/: myapp
cmake_variables/runtime_output_directory/simple/: CMakeLists.txt  foo.cpp
environment_variables/: CMakeLists.txt  app.c  build.sh
fetch_content/: FetchContent_Copy.cmake
fetch_content/calculator/calculator/: CMakeLists.txt
fetch_content/googletest/: CMakeLists.txt  README.md
fetch_content/simple/: README.md
fetch_content/simple/calculator/: CMakeLists.txt  calculator.cpp
fetch_content2/calculator/: CMakeLists.txt
get_properties/: getprop.cmake  my_demo.cmake  test.cmake
list-all-variables/: CMakeLists.txt  README.md
math/: CMakeLists.txt  README
math/calculator/: CMakeLists.txt  main.cpp
math/libmath/: CMakeLists.txt
math/libmath/src/: math.cpp  mymath.cpp
modern_cmake/why_not_use_include_directories/: README.md
modern_cmake/why_not_use_include_directories/first_reason/: README.md
modern_cmake/why_not_use_include_directories/first_reason/bad/libfoo/: CMakeLists.txt
modern_cmake/why_not_use_include_directories/first_reason/bad/src/: bar.cpp
modern_cmake/why_not_use_include_directories/first_reason/good/: README.md
modern_cmake/why_not_use_include_directories/first_reason/good/include/: bar.h
modern_cmake/why_not_use_include_directories/first_reason/good/libfoo/: CMakeLists.txt  foo.cpp
modern_cmake/why_not_use_include_directories/second_reason/: README.md
modern_cmake/why_not_use_include_directories/second_reason/bad/: CMakeLists.txt  README.md  main.cpp
modern_cmake/why_not_use_include_directories/second_reason/bad/include/: utils.h
modern_cmake/why_not_use_include_directories/second_reason/bad/libfoo/: foo.cpp  utils.h
modern_cmake/why_not_use_include_directories/second_reason/bad/src/: utils.cpp
modern_cmake/why_not_use_include_directories/second_reason/bad/subproject/: CMakeLists.txt  main.cpp
modern_cmake/why_not_use_include_directories/second_reason/good/: CMakeLists.txt  README.md  main.cpp
modern_cmake/why_not_use_include_directories/second_reason/good/subproject/: utilss.h
multi-targets/: CMakeLists.txt  main.cpp  ver1.cpp  ver2.cpp
simple_executable/: CMakeLists.txt  main.cpp
simple_executable/artifacts/: foo
test/: CMakeLists.txt
use-pkg-config/: README.md
use-pkg-config/kerberos/: CMakeLists.txt
use-pkg-config/krb5-api/: CMakeLists.txt
use_include/: CMakeLists.txt
use_include/another_dir/: CMakeLists.txt
use_include/subdirectory/: CMakeLists.txt
